--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
-TWITTER_CONSUMER_KEY=
-TWITTER_CONSUMER_SECRET=
-TWITTER_ACCESS_TOKEN=
-TWITTER_ACCESS_TOKEN_SECRET=
-SENTIMENT_KEY=
-TWITTER_USERNAME=
-TWITTER_RETWEET_RATE=
-TWITTER_FAVORITE_RATE=
+TWITTER_CONSUMER_KEY=JaJp3sT5vMOUaeMYGGyzpNJ5z
+TWITTER_CONSUMER_SECRET=DxBxETNGEEfoOCyqhF0OZVXjNszDhLJP1OZWHschse9nvnE82l
+TWITTER_ACCESS_TOKEN=832019016881352704-tmxu6EFh8yuqwFuiaTdD4cI8MaAZYo1
+TWITTER_ACCESS_TOKEN_SECRET=dhNyS8hY9ioHlDMT2ckpeAowyS28L1ACDx1NCSGpcEzXx
+SENTIMENT_KEY=9D0sMCyCRWmshNC4ey6nBGQogWfOp1w8wVhjsnBpkc3BoLmQGc
+TWITTER_USERNAME=c0fee_add1ct
+TWITTER_RETWEET_RATE=5
+TWITTER_FAVORITE_RATE=5
